--- a/css/classless.css
+++ b/css/classless.css
@@ -10,14 +10,21 @@ Table of Contents:
 
 /* 1. Theme Settings ––––––––––––––––––––-–––––––––––––– */
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+/* @import url('https://fonts.googleapis.com/css?family=Barlow:300,400'); */
+
+@font-face {
+	font-family: 'Barlow';
+	font-style: normal;
+	font-weight: 400;
+	src: url('../font/Barlow-Regular.woff2') format('woff2');
+}
 
 :root, html[data-theme='light'] {
 	--rem: 12pt;
 	--width: 50rem;
 	--navpos: absolute;  /* fixed | absolute */
-	--font-p: 1em/1.7 'Open Sans', Helvetica, sans-serif;
-	--font-h: .9em/1.5 'Open Sans', Helvetica, sans-serif;
+	--font-p: 1em/1.7 'Barlow', Helvetica, sans-serif;
+	--font-h: .9em/1.5 'Barlow', Helvetica, sans-serif;
 	--font-c: .9em/1.4 monospace;
 	--border: 1px solid var(--cmed);
 	--ornament: "‹‹‹ ›››";
