--- a/css/classless.css
+++ b/css/classless.css
@@ -1,4 +1,4 @@
-/* Classless.css v0.95
+/* Classless.css v1.0
 
 Table of Contents:
  1. Theme Settings
@@ -10,22 +10,14 @@ Table of Contents:
 
 /* 1. Theme Settings ––––––––––––––––––––-–––––––––––––– */
 
-/* @import url('https://fonts.googleapis.com/css?family=Barlow:300,400'); */
-
-@font-face {
-	font-family: 'Barlow';
-	font-style: normal;
-	font-weight: 400;
-	src: url('../font/Barlow-Regular.woff2') format('woff2');
-}
 
 :root, html[data-theme='light'] {
 	--rem: 12pt;
 	--width: 50rem;
 	--navpos: absolute;  /* fixed | absolute */
-	--font-p: 1em/1.7 'Barlow', Helvetica, sans-serif;
-	--font-h: .9em/1.5 'Barlow', Helvetica, sans-serif;
-	--font-c: .9em/1.4 monospace;
+	--font-p: 1em/1.7  'Open Sans', 'DejaVu Sans', FreeSans, Helvetica, sans-serif;
+	--font-h: .9em/1.5 'Open Sans', 'DejaVu Sans', FreeSans, Helvetica, sans-serif;
+	--font-c: .9em/1.4 'DejaVu Sans Mono', monospace;
 	--border: 1px solid var(--cmed);
 	--ornament: "‹‹‹ ›››";
 	/* foreground   | background color */
@@ -33,14 +25,14 @@ Table of Contents:
 	--cdark: #888;    --clight: #f5f6f7;
 	--cmed:  #d1d1d1;
 	--clink: #07c;
-	--cemph: #088;
+	--cemph: #088;    --cemphbg: #0881;
 }
 
 
 /* 2. Reset –––––––––––––––––––––––––––––––––––––––––––– */
 
 /* reset block elements  */
-* { box-sizing: border-box; border-spacing: 0; }
+* { box-sizing: border-box; border-spacing: 0; margin: 0; padding: 0;}
 header, footer, figure, table, video, details, blockquote,
 ul, ol, dl, fieldset, pre, pre > code, caption {
 	display: block;
@@ -50,6 +42,12 @@ ul, ol, dl, fieldset, pre, pre > code, caption {
 	text-align: left;
 }
 video, summary, input, select { outline:none; }
+
+/* reset clickable things  (FF Bug: select:hover prevents usage) */
+a, button, select, summary { color: var(--clink); cursor: pointer; }
+
+
+/* 3. Base Style ––––––––––––––––––––––––––––––––––––––– */
 html { font-size: var(--rem); background: var(--cbg); }
 body {
 	position: relative;
@@ -60,20 +58,15 @@ body {
 	padding: 3.0rem 0.6rem 0;
 	overflow-x: hidden;
 }
-body > footer { margin: 10rem 0rem 0rem; }
+body > footer { margin: 10rem 0rem 0rem; font-size: 90%; }
+p { margin: .6em 0; }
 
-/* reset clickable things  (FF Bug: select:hover prevents usage) */
-a, button, select, summary { color: var(--clink); cursor: pointer; }
+/* links */
+a[href]{ text-decoration: underline solid var(--cmed); text-underline-position: under; }
+a[href^="#"] {text-decoration: none; }
 a:hover, button:not([disabled]):hover, summary:hover {
 	filter: brightness(92%); color: var(--cemph); border-color: var(--cemph);
 }
-
-
-/* 3. Base Style ––––––––––––––––––––––––––––––––––––––– */
-
-/* links */
-a { text-decoration: underline solid var(--cmed);
-	text-underline-position: under; }
 
 /* lists */
 ul, ol, dl { margin: 1rem 0; padding: 0 0 0 2em; }
@@ -107,7 +100,7 @@ tr:hover{ background-color: var(--clight); }
 table img { display: block; }
 
 /* figures */
-img, svg { max-width: 100%; vertical-align: text-top; }
+img, svg { max-width: 100%; vertical-align: text-top; object-fit: cover; }
 p>img:not(:only-child) { float: right; margin: 0 0 .5em .5em; }
 figure > img { display: inline-block; width: auto; }
 figure > img:only-of-type, figure > svg:only-of-type { max-width: 100%; display: block; margin: 0 auto 0.4em; }
@@ -131,11 +124,11 @@ code, kbd, samp {
 kbd { border: 1px solid var(--cmed); }
 
 /* misc */
-blockquote{ border-left: 0.4rem solid var(--cmed); padding: 0 0 .5rem 1.5rem; font-style: italic;  }
+blockquote { border-left: 0.4rem solid var(--cmed); padding: 0 0 0 1rem;  }
 time{ color: var(--cdark); }
-mark { background: rgba(255,245,90,1.0); }
 hr { border: 0; border-top: 0.1rem solid var(--cmed); }
 nav { width: 100%; background-color: var(--clight); }
+::selection, mark { background: var(--clink); color: var(--cbg); }
 
 
 /* 4. Extra Style –––––––––––––––––––––––––––––––––––––– */
@@ -194,7 +187,7 @@ article h3:before { counter-increment: h3; content: counter(h2) "." counter(h3) 
 
 /* tooltip + citation */
 article p>cite:before {
-	color: var(--clink); padding: 0 .5em 0 0;
+	padding: 0 .5em 0 0;
 	counter-increment: ref; content: " [" counter(ref) "] ";
 	vertical-align: super; font-size: .6em;
 }
@@ -203,15 +196,20 @@ article p>cite:hover > *:only-child,
 [data-tooltip]:hover:before {
 	display: inline-block; z-index: 40;
 	white-space: pre-wrap;
-	position: absolute; left: 2rem; right: 2rem;
+	position: absolute; left: 1rem; right: 1rem;
 	padding: 1em 2em;
 	text-align: center;
+	transform:translateY( calc(-100%) );
 	content: attr(data-tooltip);
 	color: var(--cbg);
 	background-color: var(--cemph);
 	box-shadow: 0 2px 10px 0 black;
 }
-[data-tooltip] { color: var(--clink); cursor: help; }
+[data-tooltip], article p>cite:before { 
+	color: var(--clink);
+	border: .8rem solid transparent; margin: -.8rem;
+}
+abbr[title], [data-tooltip] { cursor: help; }
 
 /* navbar */
 nav+* { margin-top: 3rem; }
@@ -221,7 +219,6 @@ body>nav, header nav {
 	z-index: 41;
 	box-shadow: 0vw -50vw 0 50vw var(--clight), 0 calc(-50vw + 2px) 4px 50vw var(--cdark);
 }
-nav ul li > a { text-decoration: none; }
 nav ul { list-style-type: none; }
 nav ul:first-child { margin: 0; padding: 0; overflow: visible; }
 nav ul:first-child > li {
@@ -250,33 +247,24 @@ nav ul > li:hover > ul { display: block; }
 
 /* details/cards */
 summary>* { display: inline; }
-summary:hover, details[open] summary, .card>p:first-child { 
-	box-shadow: inset 0 0 0 100px var(--ccard), 0 -.6rem 0 .6rem var(--ccard); 
-}
 .card, details {
-	--ccard: var(--clight);
-	--ccbg: var(--cbg);
 	display: block;
-	margin: .5rem 0;
+	margin: 0.5rem 0rem 1rem;
 	padding: 0 .6rem;
 	border-radius: 4px;
 	overflow: hidden;
 }
-.card, details[open] { 
-	background-color: var(--ccbg);
-	outline: var(--border);
+.card, details[open] { outline: 1px solid var(--cmed); }
+.card>img:first-child { margin: -3px -.6rem; max-width: calc(100% + 1.2rem); }
+summary:hover, details[open] summary, .card>p:first-child {
+	box-shadow: inset 0 0 0 2em var(--clight), 0 -.8rem 0 .8rem var(--clight); 
 }
-.card{ font-size: 95%; }
-.card.info { --ccard: var(--cmed);  --ccbg: var(--clight); }
-.card.hint { --ccard: var(--cemph); --ccbg: #0882; }
-.card.warn { --ccard: #c11;         --ccbg: #e222; }
-.warn>p:first-child, .hint>p:first-child { color: var(--cbg); }
-.card>p:first-child { font-weight: bold; margin: .5rem 0;}
-.card>img { margin: -2px -.6rem; max-width: calc(100% + 1.2rem);}
+.hint { --cmed: var(--cemph); --clight: var(--cemphbg); background-color: var(--clight); }
+.warn { --cmed: #c11; --clight: #e221; background-color: var(--clight); }
 
 /* big first letter */
 article > section:first-of-type > h2:first-of-type + p:first-letter,
-article > h2:first-of-type + p:first-letter {
+article > h2:first-of-type + p:first-letter, .lettrine {
 	float: left;
 	font-size: 3.5em;
 	padding: 0.1em 0.1em 0 0;
@@ -322,7 +310,7 @@ button, select {
 }
 button { padding: 0.4em 1em; font-size: 85%; letter-spacing: 0.1em; }
 button[disabled]{ color: var(--cdark); border-color: var(--cmed); }
-fieldset { border-radius: 4px; border: var(--border); }
+fieldset { border-radius: 4px; border: var(--border); padding: .5em 1em;}
 textarea:hover, input:not([type=checkbox]):not([type*='ra']):hover, select:hover{
   border: 1.5px solid var(--cemph);
 }
@@ -340,12 +328,12 @@ p>select { padding: 0;      margin: 0 .5em; }
 .row { display: flex; margin:  0.5rem -0.6rem; align-items: stretch; }
 .row [class*="col"] { padding: 0  0.6rem; }
 .row .col   { flex: 1 1 100%; }
-.row .col-2 { flex: 0 0 16.666%; }
-.row .col-3 { flex: 0 0 25%; }
-.row .col-4 { flex: 0 0 33.333%; }
-.row .col-5 { flex: 0 0 41.666%; }
-.row .col-6 { flex: 0 0 50%; }
-@media (max-width: 40em) { .row { flex-direction: column; } }
+.row .col-2 { flex: 0 0 16.66%; max-width: 16.66%;}
+.row .col-3 { flex: 0 0 25%; max-width: 25%;}
+.row .col-4 { flex: 0 0 33.33%; max-width: 33.33%; }
+.row .col-5 { flex: 0 0 41.66%; max-width: 41.66%; }
+.row .col-6 { flex: 0 0 50%; max-width: 50%; }
+@media (max-width: 40rem) { .row { flex-direction: column; } }
 
 /* align */
 .text-left   { text-align: left; }
@@ -379,3 +367,15 @@ p>select { padding: 0;      margin: 0 .5em; }
 .p-1, .px-1, .pl-1 { padding-left:   1.0rem !important; }
 .p-1, .py-1, .pt-1 { padding-top:    1.0rem !important; }
 .p-1, .py-1, .pb-1 { padding-bottom: 1.0rem !important; }
+
+/* be print-friendly */
+@media print { 
+	@page { margin: 1.5cm 2cm; } 
+	html {font-size: 9pt!important; } 
+	body { max-width: 27cm; }
+	p { orphans: 2; widows: 2; }
+	caption, figcaption { page-break-before: avoid; }
+	h2, h3, h4, h5 { page-break-after: avoid;}
+	.noprint, body>nav, section:after { display: none; }
+	.row { flex-direction: row; }
+}
