--- a/css/styles.css
+++ b/css/styles.css
@@ -4,42 +4,11 @@ body {
 
 h1 {
   letter-spacing: 3px;
-  color: #ce6a85;
+  color: #ffda44;
+  display: inline;
+  vertical-align: middle;
 }
 
 p {
   margin-bottom: 0.3em;
-}
-
-textarea {
-  font-size: 15px;
-  width: 100%;
-  height: 20em;
-  line-height: 1.9;
-}
-
-table {
-  border-spacing: 5px;
-  margin: 0px auto;
-  text-align: left;
-  max-width: 90%;
-}
-
-.sortable {
-  cursor: pointer;
-}
-
-.tag {
-  padding: 0.2em;
-  font-size: 85%;
-  border-radius: 4px;
-  border: 1px solid;
-  color: #ce6a85;
-}
-
-@font-face {
-  font-family: "Karla";
-  src: url('../fonts/Karla-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
 }
